# Hand_Recognition

./: .env  README.md  data.py  keras_model.h5  labels.txt  pyproject.toml  requirements.txt  test.py
